[gd_scene load_steps=6 format=3 uid="uid://bx4q6o8h464mh"]

[ext_resource type="Texture2D" uid="uid://5ac2xulr6ekg" path="res://assets/sprites/tiles/tilemap-characters_packed.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://dw3amu7eoc2yk" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5uy6h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="Area2D"]
z_index = 1
collision_mask = 2
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5uy6h")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -9, -8, -6, -8, 3, 0, 12, 8, 3, 8, -6)

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)

[node name="RayRightDown" type="RayCast2D" parent="."]
position = Vector2(11, 0)
target_position = Vector2(0, 25)

[node name="RayLeftDown" type="RayCast2D" parent="."]
position = Vector2(-11, 0)
target_position = Vector2(0, 25)

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_check_timer_timeout"]
